[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameObjects/Stations/Outpost/outpost.png" type="Texture" id=1]
[ext_resource path="res://GameObjects/Stations/Outpost/Outpost.gd" type="Script" id=2]
[ext_resource path="res://GameObjects/Stations/Outpost/outpost_construction.png" type="Texture" id=3]
[ext_resource path="res://GameObjects/Cosmetics/Spin/Spin.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameObjects/Attributes/Inventory/Inventory.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="Outpost" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Inventory" parent="." instance=ExtResource( 5 )]

[node name="Spin" parent="." instance=ExtResource( 4 )]

[node name="ConstructionSprite" type="Sprite" parent="Spin"]
visible = false
texture = ExtResource( 3 )

[node name="StationSprite" type="Sprite" parent="Spin"]
position = Vector2( -1289, -65 )
texture = ExtResource( 1 )
offset = Vector2( 1289, 65 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 25, 25 )
shape = SubResource( 1 )

[node name="ConstructionTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ConstructionTimer" to="." method="_on_ConstructionTimer_timeout"]
